...
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:src="@android:drawable/ic_search_category_default" /> -->
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/macheslistviewlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top"
        android:layout_marginTop="5dp" >

        <ListView
            android:id="@+id/menu_right_ListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:cacheColorHint="#00000000"
            android:divider="@android:color/transparent"
            android:dividerHeight="10dp" >
...
